# darwin-bridge-adapter

./: .gitignore  Cargo.toml  README.md  foundry.toml
.github/workflows/: ci.yml
contracts/: WrappedBasketToken.sol
contracts/m2/: DarwinBasketToken.sol  DarwinStrategy.sol
contracts/script/: DeployM2Stack.s.sol
contracts/test/: BridgeClaimRoundTrip.t.sol  MockPolygonZkEVMBridge.sol  WrappedBasketToken.t.sol
contracts/test/m2/: DarwinBasketToken.t.sol  DarwinStrategy.t.sol
src/: b2agg.rs  claim.rs  eth.rs  lib.rs
tests/: local_stack_round_trip.rs
